# gpt_bot

./: .env  README.md  pyproject.toml
src/: __main__.py
src/integration/: __init__.py
src/utils/: __init__.py  db_dialog.py
